# usv-project

./: .gitignore  README.md  manage.py
backend/: CMakeLists.txt  README.md
backend/src/: BackendEngine.cpp  BackendEngine.h  BackendProtocol.h  Types.h  main.cpp
backend/tests/: BackendEngineTests.cpp
client/: README.md
client/USV_GS_Test/USV_GS_Test/: BoatLocationProvider.cpp  BoatLocationProvider.h  BoatSimulator.cpp  BoatSimulator.h  CMakeLists.txt  EnvironmentDataProvider.cpp  EnvironmentDataProvider.h  Info.plist.in  Main.qml  ManualControl.qml  RouteAutoPlanner.js  RouteSaver.cpp  RouteSaver.h  SamplingControl.qml  SamplingTaskBridge.cpp  SamplingTaskBridge.h  main.cpp  map_gaode.html  resources.qrc
visualization/: README.md
